--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -6633,52 +6633,52 @@ TerminalWindow .scrollbar.trough {
 .top .budgie-panel WnckTasklist .button {
   border: 2px solid transparent; }
   .top .budgie-panel WnckTasklist .button:hover {
-    border-top: 2px solid alpha(#00BCD4, 0.5); }
+    border-top: 2px solid alpha(#ECEFF1, 0.4); }
   .top .budgie-panel WnckTasklist .button:active, .top .budgie-panel WnckTasklist .button:checked {
     border-top: 2px solid #00BCD4; }
 .top .budgie-panel .launcher {
   border: 2px solid transparent; }
   .top .budgie-panel .launcher:hover {
-    border-top: 2px solid alpha(#00BCD4, 0.5); }
+    border-top: 2px solid alpha(#ECEFF1, 0.4); }
   .top .budgie-panel .launcher:active, .top .budgie-panel .launcher:checked {
     border-top: 2px solid #00BCD4; }
 
 .bottom .budgie-panel WnckTasklist .button {
   border: 2px solid transparent; }
   .bottom .budgie-panel WnckTasklist .button:hover {
-    border-bottom: 2px solid alpha(#00BCD4, 0.5); }
+    border-bottom: 2px solid alpha(#ECEFF1, 0.4); }
   .bottom .budgie-panel WnckTasklist .button:active, .bottom .budgie-panel WnckTasklist .button:checked {
     border-bottom: 2px solid #00BCD4; }
 .bottom .budgie-panel .launcher {
   border: 2px solid transparent; }
   .bottom .budgie-panel .launcher:hover {
-    border-bottom: 2px solid alpha(#00BCD4, 0.5); }
+    border-bottom: 2px solid alpha(#ECEFF1, 0.4); }
   .bottom .budgie-panel .launcher:active, .bottom .budgie-panel .launcher:checked {
     border-bottom: 2px solid #00BCD4; }
 
 .left .budgie-panel WnckTasklist .button {
   border: 2px solid transparent; }
   .left .budgie-panel WnckTasklist .button:hover {
-    border-left: 2px solid alpha(#00BCD4, 0.5); }
+    border-left: 2px solid alpha(#ECEFF1, 0.4); }
   .left .budgie-panel WnckTasklist .button:active, .left .budgie-panel WnckTasklist .button:checked {
     border-left: 2px solid #00BCD4; }
 .left .budgie-panel .launcher {
   border: 2px solid transparent; }
   .left .budgie-panel .launcher:hover {
-    border-left: 2px solid alpha(#00BCD4, 0.5); }
+    border-left: 2px solid alpha(#ECEFF1, 0.4); }
   .left .budgie-panel .launcher:active, .left .budgie-panel .launcher:checked {
     border-left: 2px solid #00BCD4; }
 
 .right .budgie-panel WnckTasklist .button {
   border: 2px solid transparent; }
   .right .budgie-panel WnckTasklist .button:hover {
-    border-right: 2px solid alpha(#00BCD4, 0.5); }
+    border-right: 2px solid alpha(#ECEFF1, 0.4); }
   .right .budgie-panel WnckTasklist .button:active, .right .budgie-panel WnckTasklist .button:checked {
     border-right: 2px solid #00BCD4; }
 .right .budgie-panel .launcher {
   border: 2px solid transparent; }
   .right .budgie-panel .launcher:hover {
-    border-right: 2px solid alpha(#00BCD4, 0.5); }
+    border-right: 2px solid alpha(#ECEFF1, 0.4); }
   .right .budgie-panel .launcher:active, .right .budgie-panel .launcher:checked {
     border-right: 2px solid #00BCD4; }
 
