--- a/gtk-3.20/_3rd-party.scss
+++ b/gtk-3.20/_3rd-party.scss
@@ -93,7 +93,7 @@ $orientation: ((top, bottom),
     #tasklist-button button:backdrop {
       border: 2px solid transparent;
       &:hover {
-        border-#{$along_side}: 2px solid gtkalpha($selected_bg_color, 0.5);
+        border-#{$along_side}: 2px solid gtkalpha($inverted_fg_color, 0.4);
       }
       &:active,
       &:checked {
@@ -105,7 +105,7 @@ $orientation: ((top, bottom),
     button.flat.launcher:backdrop {
       border: 2px solid transparent;
       &:hover {
-        border-#{$along_side}: 2px solid gtkalpha($selected_bg_color, 0.5);
+        border-#{$along_side}: 2px solid gtkalpha($inverted_fg_color, 0.4);
       }
       &:active,
       &:checked {
