--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -9899,7 +9899,7 @@ window overlay > grid > frame > grid list separator {
 window > box.vertical > grid.vertical > stack stack > spinner {
   min-width: 1.80451rem;
   min-height: 1.80451rem;
-  padding: 4rem 6rem 4rem; }
+  padding: 4rem 6.0rem 4rem; }
 
 /******************
  * Budgie Desktop *
@@ -10421,7 +10421,7 @@ window .budgie-panel .pinned grid.vertical > widget > box > button.launcher.runn
   border: 2px solid transparent; }
   .top .budgie-panel #tasklist-button button:hover,
   .top .budgie-panel #tasklist-button button:backdrop:hover {
-    border-top: 2px solid alpha(#00BCD4, 0.5); }
+    border-top: 2px solid alpha(#ECEFF1, 0.4); }
   .top .budgie-panel #tasklist-button button:active, .top .budgie-panel #tasklist-button button:checked,
   .top .budgie-panel #tasklist-button button:backdrop:active,
   .top .budgie-panel #tasklist-button button:backdrop:checked {
@@ -10629,7 +10629,7 @@ window .top .budgie-panel grid.vertical > widget > box > button.launcher.image-b
   .budgie-polkit-dialog .top .budgie-panel button.launcher:backdrop:hover,
   .top .budgie-panel window grid.vertical > widget > box > button.launcher.image-button:backdrop:hover,
   window .top .budgie-panel grid.vertical > widget > box > button.launcher.image-button:backdrop:hover {
-    border-top: 2px solid alpha(#00BCD4, 0.5); }
+    border-top: 2px solid alpha(#ECEFF1, 0.4); }
   .top .budgie-panel button.flat.launcher:active, .top .budgie-panel buttonbox button.launcher:active, buttonbox .top .budgie-panel button.launcher:active, .top .budgie-panel buttonbox.dialog-action-area button.launcher:active, buttonbox.dialog-action-area .top .budgie-panel button.launcher:active, .top .budgie-panel button.launcher.osd.image-button:active,
   .top .budgie-panel .launcher.button.osd.image-button:active, .top .budgie-panel .inline-toolbar button.launcher:active, .inline-toolbar .top .budgie-panel button.launcher:active,
   .top .budgie-panel button actionbar.launcher:active,
@@ -10838,7 +10838,7 @@ window .top .budgie-panel grid.vertical > widget > box > button.launcher.image-b
   border: 2px solid transparent; }
   .bottom .budgie-panel #tasklist-button button:hover,
   .bottom .budgie-panel #tasklist-button button:backdrop:hover {
-    border-bottom: 2px solid alpha(#00BCD4, 0.5); }
+    border-bottom: 2px solid alpha(#ECEFF1, 0.4); }
   .bottom .budgie-panel #tasklist-button button:active, .bottom .budgie-panel #tasklist-button button:checked,
   .bottom .budgie-panel #tasklist-button button:backdrop:active,
   .bottom .budgie-panel #tasklist-button button:backdrop:checked {
@@ -11046,7 +11046,7 @@ window .bottom .budgie-panel grid.vertical > widget > box > button.launcher.imag
   .budgie-polkit-dialog .bottom .budgie-panel button.launcher:backdrop:hover,
   .bottom .budgie-panel window grid.vertical > widget > box > button.launcher.image-button:backdrop:hover,
   window .bottom .budgie-panel grid.vertical > widget > box > button.launcher.image-button:backdrop:hover {
-    border-bottom: 2px solid alpha(#00BCD4, 0.5); }
+    border-bottom: 2px solid alpha(#ECEFF1, 0.4); }
   .bottom .budgie-panel button.flat.launcher:active, .bottom .budgie-panel buttonbox button.launcher:active, buttonbox .bottom .budgie-panel button.launcher:active, .bottom .budgie-panel buttonbox.dialog-action-area button.launcher:active, buttonbox.dialog-action-area .bottom .budgie-panel button.launcher:active, .bottom .budgie-panel button.launcher.osd.image-button:active,
   .bottom .budgie-panel .launcher.button.osd.image-button:active, .bottom .budgie-panel .inline-toolbar button.launcher:active, .inline-toolbar .bottom .budgie-panel button.launcher:active,
   .bottom .budgie-panel button actionbar.launcher:active,
@@ -11255,7 +11255,7 @@ window .bottom .budgie-panel grid.vertical > widget > box > button.launcher.imag
   border: 2px solid transparent; }
   .left .budgie-panel #tasklist-button button:hover,
   .left .budgie-panel #tasklist-button button:backdrop:hover {
-    border-left: 2px solid alpha(#00BCD4, 0.5); }
+    border-left: 2px solid alpha(#ECEFF1, 0.4); }
   .left .budgie-panel #tasklist-button button:active, .left .budgie-panel #tasklist-button button:checked,
   .left .budgie-panel #tasklist-button button:backdrop:active,
   .left .budgie-panel #tasklist-button button:backdrop:checked {
@@ -11463,7 +11463,7 @@ window .left .budgie-panel grid.vertical > widget > box > button.launcher.image-
   .budgie-polkit-dialog .left .budgie-panel button.launcher:backdrop:hover,
   .left .budgie-panel window grid.vertical > widget > box > button.launcher.image-button:backdrop:hover,
   window .left .budgie-panel grid.vertical > widget > box > button.launcher.image-button:backdrop:hover {
-    border-left: 2px solid alpha(#00BCD4, 0.5); }
+    border-left: 2px solid alpha(#ECEFF1, 0.4); }
   .left .budgie-panel button.flat.launcher:active, .left .budgie-panel buttonbox button.launcher:active, buttonbox .left .budgie-panel button.launcher:active, .left .budgie-panel buttonbox.dialog-action-area button.launcher:active, buttonbox.dialog-action-area .left .budgie-panel button.launcher:active, .left .budgie-panel button.launcher.osd.image-button:active,
   .left .budgie-panel .launcher.button.osd.image-button:active, .left .budgie-panel .inline-toolbar button.launcher:active, .inline-toolbar .left .budgie-panel button.launcher:active,
   .left .budgie-panel button actionbar.launcher:active,
@@ -11672,7 +11672,7 @@ window .left .budgie-panel grid.vertical > widget > box > button.launcher.image-
   border: 2px solid transparent; }
   .right .budgie-panel #tasklist-button button:hover,
   .right .budgie-panel #tasklist-button button:backdrop:hover {
-    border-right: 2px solid alpha(#00BCD4, 0.5); }
+    border-right: 2px solid alpha(#ECEFF1, 0.4); }
   .right .budgie-panel #tasklist-button button:active, .right .budgie-panel #tasklist-button button:checked,
   .right .budgie-panel #tasklist-button button:backdrop:active,
   .right .budgie-panel #tasklist-button button:backdrop:checked {
@@ -11880,7 +11880,7 @@ window .right .budgie-panel grid.vertical > widget > box > button.launcher.image
   .budgie-polkit-dialog .right .budgie-panel button.launcher:backdrop:hover,
   .right .budgie-panel window grid.vertical > widget > box > button.launcher.image-button:backdrop:hover,
   window .right .budgie-panel grid.vertical > widget > box > button.launcher.image-button:backdrop:hover {
-    border-right: 2px solid alpha(#00BCD4, 0.5); }
+    border-right: 2px solid alpha(#ECEFF1, 0.4); }
   .right .budgie-panel button.flat.launcher:active, .right .budgie-panel buttonbox button.launcher:active, buttonbox .right .budgie-panel button.launcher:active, .right .budgie-panel buttonbox.dialog-action-area button.launcher:active, buttonbox.dialog-action-area .right .budgie-panel button.launcher:active, .right .budgie-panel button.launcher.osd.image-button:active,
   .right .budgie-panel .launcher.button.osd.image-button:active, .right .budgie-panel .inline-toolbar button.launcher:active, .inline-toolbar .right .budgie-panel button.launcher:active,
   .right .budgie-panel button actionbar.launcher:active,
